docs: document product handlers with swaggers
